<resources>
    <string name="app_name">MyVirtualClassApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_students">Register Students</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="course">Course</string>
    <string name="register_student">Register Student</string>
</resources>